<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_normal_margin">

        <TextView
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/term_use"/>

        <com.skyzone.myethic.GS.CustomView.MesuredWebView
            android:id="@+id/view_term_chat_dialog_content"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center_vertical|right"
            android:orientation="horizontal">

            <Button
                android:id="@+id/view_term_chat_dialog_bt_cancel"
                style="@style/Base.Widget.AppCompat.ActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt_disagree"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:visibility="invisible"/>

            <Button
                android:id="@+id/view_term_chat_dialog_bt_submit"
                style="@style/Base.Widget.AppCompat.ActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt_agree"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:visibility="invisible"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>