<?xml version="1.0" encoding="utf-8"?>
<com.skyzone.foolpeachethics.view.ResizeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_talk_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#D90F3543">


        <ListView
            android:id="@+id/fragment_talk_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"></ListView>

        <LinearLayout
            android:id="@+id/fragment_talk_list_view_empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/activity_normal_margin"
            android:showDividers="end">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_normal_margin"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@drawable/img_fp_talk"/>

                <TextView
                    android:id="@+id/fragment_talk_list_view_text_content"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/activity_normal_margin"
                    android:text="@string/chat_empty"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_talk_voice_parent"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:background="@drawable/round_rec_black_50"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/activity_normal_margin"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/icon_mike2"/>

                <com.skyzone.foolpeachethics.view.RecorderAni
                    android:id="@+id/fragment_talk_voice_state_ani"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:background="@android:color/transparent"/>

            </LinearLayout>

            <TextView
                android:id="@+id/fragment_talk_voice_state_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dp_5"
                android:text="@string/cancel_record"
                android:textColor="@android:color/white"/>
        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFF4F4F4"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/fragment_talk_bt_voice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:adjustViewBounds="true"
            android:src="@mipmap/icon_keyboard_mike"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1.0">

            <TextView
                android:id="@+id/fragment_talk_bt_send_voice"
                android:layout_width="fill_parent"
                android:layout_height="38dp"
                android:background="@drawable/chatting_voice_bg"
                android:clickable="true"
                android:gravity="center"
                android:soundEffectsEnabled="true"
                android:text="@string/press_to_talk"
                android:textColor="#b3b3b3"
                android:textSize="16sp"
                android:visibility="gone"/>

            <EditText
                android:id="@+id/fragment_talk_send_edt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/round_rec_white"
                android:gravity="center_vertical|left"
                android:maxLines="5"
                android:minHeight="38dp"
                android:padding="5dp"
                android:singleLine="false"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:visibility="visible"
                tools:ignore="TextFields"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="60dp"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/fragment_talk_bt_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:adjustViewBounds="true"
                android:clickable="true"
                android:src="@mipmap/icon_keyboard_plus"
                android:visibility="visible"/>

            <ImageView
                android:id="@+id/fragment_talk_bt_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:adjustViewBounds="true"
                android:src="@drawable/bt_next"
                android:visibility="gone"/>

        </RelativeLayout>

    </LinearLayout>

    <com.skyzone.foolpeachethics.view.BeforeMeasureFrameLayout
        android:id="@+id/fragment_talk_plus_parent"
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:background="#FFF4F4F4"
        android:visibility="gone">

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_marginLeft="45dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/fragment_talk_bt_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@mipmap/icon_keyboard_album"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/album"
                    android:textSize="12sp"
                    android:textColor="#FF858585"/>

            </LinearLayout>


            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/fragment_talk_bt_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@mipmap/icon_keyboard_camera"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/camera"
                    android:textSize="12sp"
                    android:textColor="#FF858585"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginRight="45dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/fragment_talk_bt_file"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@mipmap/icon_keyboard_file"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/document"
                    android:textSize="12sp"
                    android:textColor="#FF858585"/>

            </LinearLayout>

        </LinearLayout>

    </com.skyzone.foolpeachethics.view.BeforeMeasureFrameLayout>


</com.skyzone.foolpeachethics.view.ResizeLayout>